# duckdb-dbt-dagster

./: .env.example  .gitignore  README.md  data_load_pipeline.py  export_report_to_excel.py  extract_to_duckdb.py
Notebook/: demo-pipline.ipynb
dagster_code/: .gitignore  README.md  generate_dbt_manifest.py  pyproject.toml
dagster_code/.tmp_dagster_home_b0kfxbol/history/: runs.db
dagster_code/.tmp_dagster_home_b0kfxbol/history/runs/: .db  index.db
dagster_code/.tmp_dagster_home_b0kfxbol/schedules/: schedules.db
dagster_code/data/duckdb/: .gitkeep
dagster_code/dbt_code/: .user.yml  profiles.yml
dagster_code/dbt_code/models/marts/users_victimas/: mart_etnia.sql  mart_genero.sql
dagster_code/dbt_code/models/refined/: _ref_victimas_cleaned_test.yml  ref_victimas_cleaned.sql
dagster_code/dbt_code/source/: _sources.yml
dagster_code/src/dagster_code/: definitions.py
dagster_code/src/dagster_code/defs/: assets.buckup  assets.py  resources.py  schedules.py
dagster_code/src/dagster_code/defs/assets/: __init__.py  dbt_assets.py  ingestion_assets.py  reporting_assets.py
dagster_code/tests/: asset_checks.py
dagster_pipeline/: __init__.py  assets.py  resources.py
dbt_code/: dbt_project.yml
dbt_code/models/marts/users_victimas/: mart_ciudad.sql  mart_discapacidad.sql  mart_edad.sql  mart_etnia.sql  mart_genero.sql
dbt_code/models/refined/: schema.yml  victimas_clean.sql  victimas_cleaned.sql
dbt_code/models/staging/: schema.yml  sources.yml  stg_victimas.sql  tables_victimas.sql
dbt_code/source/: sources.yml
(+1 files in other folders)
